--- a/express-mongodb/views/layout.jade
+++ b/express-mongodb/views/layout.jade
@@ -1,7 +1,18 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+      block head
+          block title
+              title=title
+          block meta
+              meta(name='description', content='')
+              meta(name='keywords', content='')
+          link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+          link(rel='stylesheet', href='/stylesheets/style.css')
+          script(src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
+
+
   body
-    block content
+      include header
+      block content
+      include footer
